# obs_mod

./: .gitmodules  CMakeLists.txt
UI/: CMakeLists.txt  adv-audio-control.cpp  adv-audio-control.hpp  api-interface.cpp  obs-app.cpp  obs-app.hpp  obs_studio_multistreaming.files  obs_studio_multistreaming.includes  volume-control.cpp  volume-control.hpp  window-basic-auto-config.cpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-main-profiles.cpp  window-basic-main-scene-collections.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-main.hpp.autosave  window-basic-properties.cpp  window-basic-settings.cpp  window-basic-settings.hpp  window-basic-status-bar.cpp  window-projector.cpp
UI/data/locale/: en-US.ini  es-ES.ini  ja-JP.ini
UI/data/themes/: Acri.qss  Blue.qss  Dark.qss  DeepPurple.qss  DeepRed.qss  Default.qss  Gold.qss  Hacker.qss  NewBlue.qss  NewDark.qss  NewDefault.qss  Orange.qss  Pink.qss  Rachni.qss  抹茶.qss
UI/forms/: OBSBasic.ui  OBSBasicSettings.ui  OBSBasicSettings.ui.autosave  advanced_recording.cpp  advanced_recording.h  advanced_recording.ui  dialog.cpp  dialog.h  dialog.ui  obs.qrc
UI/obs-frontend-api/: obs-frontend-api.h
UI/win-update/updater/: CMakeLists.txt
cmake/Modules/: ObsCpack.cmake
libobs/: CMakeLists.txt  obs-source.c  obs.h
libobs-d3d11/: d3d11-subsystem.hpp
libobs-metal/: CMakeLists.txt  metal-shaderprocessor.hpp  metal-shaderprocessor.mm  metal-subsystem.hpp  metal-vertexbuffer.mm
libobs-opengl/: gl-indexbuffer.c  gl-vertexbuffer.c
libobs/util/: platform-cocoa.m  platform-nix.c
plugins/: CMakeLists.txt
plugins/c3-ffmpeg-audio-filters/: CMakeLists.txt  ffmpeg_acompressor.c  obs-ffmpeg-audio-filters.c
plugins/c3-ffmpeg-audio-filters/data/locale/: en-US.ini  ja-JP.ini
plugins/c3-ffmpeg-audio-filters/headers/: obs-ffmpeg-audio-filters-compat.h  obs-ffmpeg-audio-filters-config.h.in  obs-ffmpeg-audio-filters.h
plugins/c3-ffmpeg-audio-filters/temp/: ffmpeg_acrusher.c  ffmpeg_pan.c  ffmpeg_stereowiden.c
plugins/c3-filters/: CMakeLists.txt  gaussian-blur-filter.c  obs-c3-filters.c  star-filter.c
plugins/c3-filters/data/: gaussian_blur_filter.effect  star_filter.effect
plugins/c3-filters/data/locale/: en-US.ini  ja-JP.ini
plugins/obs-bgtexture/: CMakeLists.txt
plugins/obs-bgtexture/bgtexture/: CMakeLists.txt  bgtexture.c  test-random.c
plugins/obs-bgtexture/bgtexture/solid/: bgcolor.effect
plugins/obs-bgtexture/unix/: CMakeLists.txt  bgtexture.mm
plugins/obs-bgtexture/win/: CMakeLists.txt  bgtexture.cpp
plugins/obs-ffmpeg/: obs-ffmpeg-source.c
plugins/obs-filters/: CMakeLists.txt  cross-stitching-filter.c  crosshatching-filter.c  droste-filter.c  like-a-dream-filter.c  luma-key-filter.c  night-vision-filter.c  obs-filters.c  pixelation-filter.c  posterize-filter.c  radial-blur-filter.c  sepia-filter.c
plugins/obs-filters/data/: cross_stitching_filter.effect  cross_stitching_filter_gl.effect  crosshatching_filter.effect  crosshatching_filter_gl.effect  droste_filter.effect  like_a_dream_filter.effect  luma_key_filter.effect  night_vision_filter.effect  pixelate_transition.effect  pixelation_filter.effect  posterize_filter.effect  radial_blur_filter.effect  sepia_filter.effect
plugins/obs-filters/data/locale/: en-US.ini  ja-JP.ini
plugins/obs-filters/data/noise/: copyright_notice.txt
plugins/obs-libfdk-hev1/: CMakeLists.txt  obs-libfdk-hev1.c
plugins/obs-libfdk-hev1/data/locale/: en-US.ini  ja-JP.ini
plugins/obs-libfdk-hev2/: CMakeLists.txt  obs-libfdk-hev2.c
plugins/obs-libfdk-hev2/data/locale/: en-US.ini  ja-JP.ini
plugins/obs-libfdk-lc/: CMakeLists.txt  obs-libfdk-lc.c
plugins/obs-libfdk-lc/data/locale/: en-US.ini  ja-JP.ini
plugins/obs-stream-effects/: CMakeLists.txt
plugins/obs-stream-effects/rawdata/: disp-stretch-middle.psd  displace-stretch-middle.psd  displacement.psd  neutral.psd  stretch-middle.psd
plugins/obs-transitions/: transition-stinger.c
plugins/obs-x264/: obs-x264.c
plugins/obs-x264/data/locale/: ja-JP.ini
plugins/text-freetype2/: text-freetype2.c  text-functionality.c
plugins/win-capture/: CMakeLists.txt  duplicator-monitor-capture.c  game-capture.c  monitor-capture.c  nt-stuff.h  plugin-main.c  select-region.c  select-region.h  subregion-monitor-capture.c  window-helpers.c
plugins/win-capture/data/locale/: ja-JP.ini
plugins/win-capture/graphics-hook/: dxgi-capture.cpp
